work with express

--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "name": "firsthw",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "cerver.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node script.js"
+    "start": "node cerver.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^5.1.0",
     "moment": "^2.30.1"
   }
 }
