--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "firsthw",
   "version": "1.0.0",
   "description": "",
-  "main": "cerver.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node cerver.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
